# test

./: WWW.txt
msgGetter/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  msgGetter.kdev4  receiver  receiver.cpp  receiver2  receiver2.cpp  sender  sender.cpp  sender.cpp~
msgGetter/.kdev4/: msgGetter.kdev4
